--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
 ---
 layout: home
+quotes:
+  - verse: "2 Corinthians 9:7"
+    text: "Each of you should give what you have decided in your heart to give, not reluctantly or under compulsion, for God loves a cheerful giver."
+  - verse: "Proverbs 18:16"
+    text: "A gift opens the way; and ushers the giver into the presence of the great."
+  - verse: "Proverbs 11:25"
+    text: "A generous person will prosper; whoever refreshes others will be refreshed."
+  - verse: "2 Corinthians 8:12"
+    text: "For if the willingness is there, the gift is acceptable according to what one has, not according to what one does not have."
+  - verse: "1 Chronicles 29:14"
+    text: "But who am I, and who are my people, that we should be able to give as generously as this? Everything comes from you, and we have given you only what comes from your hand."
+  - verse: "Luke 6:38"
+    text: "Give, and it will be given to you. A good measure, pressed down, shaken together and running over, will be poured into your lap. For with the measure you use, it will be measured to you."
+  - verse: "Matthew 6:2"
+    text: "So when you give to the needy, do not announce it with trumpets, as the hypocrites do in the synagogues and on the streets, to be honored by others. Truly I tell you, they have received their reward in full."
+  - verse: "2 Corinthians 9:11"
+    text: "You will be enriched in every way so that you can be generous on every occasion, and through us your generosity will result in thanksgiving to God."
 ---
